dnl Autoconf configure script for GDB's gnulib import.
dnl Copyright (C) 1995-2012 Free Software Foundation, Inc.
dnl
dnl This file is part of GDB.
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 3 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.

dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.64)dnl
AC_INIT(import/memmem.c)
AC_CONFIG_HEADER(config.h:config.in)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_USE_SYSTEM_EXTENSIONS
gl_EARLY
AM_PROG_CC_STDC

AC_CONFIG_AUX_DIR(../..)
AC_CANONICAL_SYSTEM

gl_INIT

AM_INIT_AUTOMAKE(libgnu, UNUSED-VERSION, [foreign no-dist])

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
